hard-gists/ec9c9074373d2443594a/run.log
=== Docker Run Log for ec9c9074373d2443594a ===
Started at: Mi 29. Okt 20:54:32 CET 2025

[2025-10-29 20:54:33] START: Running container for ec9c9074373d2443594a
[2025-10-29 20:54:33] SUCCESS: Container d8673af29a9c93c218819099e0c51a538104d44b6e364080ced0e25a716cca74 started for ec9c9074373d2443594a
=== Container logs for ec9c9074373d2443594a ===
  File "/snippet.py", line 101
    print 'Done %d/%d files' % (i+len(batch_range), len(filenames))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ec9c9074373d2443594a ===
[2025-10-29 20:54:35] INFO: Container d8673af29a9c93c218819099e0c51a538104d44b6e364080ced0e25a716cca74 has stopped
